--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "sub-converter",
-  "version": "1.0.0",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.6.7",
-    "js-yaml": "^4.1.0"
-  },
-  "scripts": {
-    "start": "node index.js"
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
